build: dockerfile 수정